--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <application
         android:allowBackup="true"
         android:icon="@drawable/jwello_icon"
+        android:name=".Jewello"
         android:label="@string/app_name"
         android:roundIcon="@drawable/jwello_icon"
         android:supportsRtl="true"
