--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,14 +3,14 @@
     package="com.dawar.jewellerybilling">
 
     <application
+        android:name=".Jewello"
         android:allowBackup="true"
         android:icon="@drawable/jwello_icon"
-        android:name=".Jewello"
         android:label="@string/app_name"
         android:roundIcon="@drawable/jwello_icon"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".customers.AddCustomerActivity"></activity>
+        <activity android:name=".customers.AddCustomerActivity"/>
         <activity android:name=".customers.CustomersActivity" />
         <activity
             android:name=".settings.SettingsActivity"
