--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,9 +61,9 @@ dependencies {
     // Room components
     implementation "android.arch.persistence.room:runtime:1.1.1"
     // Kotlin Extensions and Coroutines support for Room
-    implementation "androidx.room:room-ktx:2.2.5"
+    implementation "androidx.room:room-ktx:2.2.6"
     //kapt "android.arch.persistence.room:compiler:1.1.1"
-    kapt "androidx.room:room-compiler:2.2.5"
+    kapt "androidx.room:room-compiler:2.2.6"
 
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
 
@@ -78,6 +78,10 @@ dependencies {
 
     //Preferences
     implementation "androidx.datastore:datastore-preferences:1.0.0-alpha05"
+
+    // For Kotlin use paging-runtime-ktx
+    implementation "androidx.paging:paging-runtime-ktx:2.1.2"
+
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
